# PolyEdge

./: $  .diff_crates.txt  .full_diff.txt  .gitignore  .tmp_diff.txt  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  analyze_latency_arbitrage_feasibility_and_risk.md  benchmark.py  check.txt  clean_python_slop.py  clean_rust_slop.py  codex_changes.patch  codex_sync.tgz  err.txt  err_phase9.txt  execute_cleanup.py  find_slop.py  hyper_mesh_architecture_backup.md  ire_metrics.json  latency_report.csv  out.json  out_tcp.json  polyedge.cmd  remove_except_slop.py  run_paper_tests.sh  setup_relay_test.sh  slop_findings.txt  slop_report.txt  test.json  test_out.txt  test_output.txt
.github/workflows/: ci.yml
.sisyphus/: ralph-loop.local.md
configs/: execution.toml  latency.toml  optimized.env.example  polyedge_cli.toml  risk.toml  seat.toml  settlement.toml  strategy.toml  strategy_kamikaze.toml  strategy_maker.toml  universe.toml
configs/edgeflow_v1/: README.md
configs/fev1/: README.md
configs/paper-fast/: stage20_balanced.toml  stage20_coverage.toml  stage20_quality.toml  stage30_diagnostic.toml  strategy_defaults_backup_2026-02-25.json
configs/strategy-profiles/: backup_2026_02_25.full.json  btc15m_highwin_lowdd_2026_03_02.full.json  btc15m_overall_2026_03_14.full.json  btc5m_balance_2026_03_06.full.json  btc5m_highwin_2026_03_07.full.json  btc5m_highwin_85plus_2026_03_07.full.json  btc5m_overall_2026_03_14.full.json  btc5m_sharp_2026_03_07.full.json  cand_growth_mix_2026_02_28.full.json  eth5m_overall_2026_03_14.full.json  manual_balanced_2026_02_28.full.json  manual_guarded_2026_02_27.full.json  manual_hi_freq_2026_02_27.full.json  manual_hi_win_2026_02_27.full.json  manual_profit_2026_02_27.full.json  manual_profit_max_2026_02_27.full.json  manual_profit_plus_2026_02_27.full.json  recommended_smallcap_compound_2026_02_27.full.json  sol5m_balance_2026_03_07.full.json  sol5m_balance_plus_2026_03_07.full.json  sol5m_overall_2026_03_14.full.json  sol5m_sharp_2026_03_07.full.json  strict_2026_02_26.full.json  strict_no_autotune_2026_02_26.full.json  xrp5m_overall_2026_03_14.full.json
crates/app_runner/: Cargo.toml  errors.txt
crates/app_runner/src/: bootstrap.rs  config_loader.rs  control_api.rs  engine_core.rs  engine_loop.rs  execution_eval.rs  feed_runtime.rs  fusion_engine.rs  gate_eval.rs  main.rs  orchestration.rs  paper_runtime.rs  paper_sqlite.rs  report_io.rs  seat_persist.rs  seat_runtime.rs  seat_types.rs  state.rs  stats_utils.rs  strategy_live.rs  strategy_policy.rs  strategy_runtime.rs  tests.rs  toxicity_report.rs  toxicity_runtime.rs
crates/app_tokyo_brain/: Cargo.toml
crates/core_types/: Cargo.toml
crates/direction_detector/: Cargo.toml
crates/execution_clob/: Cargo.toml
crates/execution_clob/src/: lib.rs  wss_user_feed.rs
crates/exit_manager/: Cargo.toml
crates/fair_value/: Cargo.toml
crates/feed_polymarket/: Cargo.toml
crates/feed_reference/: Cargo.toml
crates/feed_reference/src/: lib.rs
crates/feed_udp/: Cargo.toml
crates/feed_udp/src/: lib.rs
crates/feeder_tokyo/: Cargo.toml
crates/feeder_tokyo/src/: main.rs
crates/forge_tokyo_relay/: Cargo.toml
crates/forge_tokyo_relay/src/: cli.rs  common.rs  main.rs  relay.rs
crates/forge_tokyo_relay/tests/: cli_help.rs
crates/forge_wire/: Cargo.toml
crates/infra_bus/: Cargo.toml
crates/infra_clock/: Cargo.toml
crates/market_discovery/: Cargo.toml
crates/observability/: Cargo.toml
crates/paper_executor/: Cargo.toml
crates/paper_executor/src/: lib.rs  reporter.rs
crates/poly_wire/: Cargo.toml
crates/polyedge_cli/: Cargo.toml
crates/polyedge_cli/src/: main.rs
crates/polyedge_data_backend/: Cargo.toml
crates/polyedge_data_backend/src/: main.rs
crates/polyedge_forge/: Cargo.toml
crates/polyedge_forge/src/: AGENTS.md  api.rs  cli.rs  common.rs  data_quality.rs  db_sink.rs  fev1.rs  ireland.rs  main.rs  models.rs  persist.rs  tokyo.rs
crates/polyedge_forge/src/api/: AGENTS.md  ARCHITECTURE.md  infra.rs  live_execution.rs  market_utils.rs  mod.rs  read_api.rs  row_utils.rs  snapshot.rs  strategy.rs
crates/polyedge_forge/src/api/live_execution/: AGENTS.md  config.rs  gateway.rs  orchestrator.rs  pending.rs  planner.rs  rust_sdk.rs  targeting.rs  tests.rs
crates/polyedge_forge/src/api/strategy/: autotune.rs  config.rs  handlers.rs  optimize.rs  runtime.rs
crates/polyedge_forge/src/market_data_exchange/: mod.rs
crates/polyedge_forge/src/market_switch/: mod.rs
crates/polyedge_forge/tests/: cli_help.rs
crates/polyedge_hpo/: AGENTS.md  Cargo.toml
crates/polyedge_hpo/src/: main.rs  model.rs  search.rs
crates/polyedge_hyper_mesh/: Cargo.toml  README.md
crates/polyedge_hyper_mesh/src/: health.rs  lib.rs  main.rs  protocol.rs  tracker.rs
docs/: data_backend.md  live_research_dashboard.md  metrics_contract.md  polyedge_cli.md  runtime_state_machines.md  seat_transport_ab_runbook.md  seat_v23_runbook.md  v52_atomic_commit_map.md
heatmap_dashboard/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: TIME_ARBITRAGE_NETWORK.md  ab_region_compare.py  analyze_fullchain_run.py  cargo_msvc.ps1  convergence_analysis.py  deploy_vpc.sh  e2e_latency_test.py  full_latency_sweep.py  generate_morning_report.py  hft_kernel_tune.sh  install_polyedge_cli.ps1  latency_test.py  legacy_rest_probe.py  live_gateway_canary.py  live_research_dashboard.py  long_regression_orchestrator.py  network_monitor.py  network_stress_test.py  paper_runner.py  param_regression.py  pipeline_latency_audit.py  print_shadow_kpis.py  probe_binance_endpoints_tokyo.sh  remote_deploy_validate.ps1  remote_fullchain_benchmark.ps1  roll_v1_first_minute_diagnosis.py  roll_v1_kline_recent_fit.py  roll_v1_official_fit_iter.py  roll_v1_recorder_secondline_plots.py  roll_v1_secondline_charts.py  roll_v1_synthetic_signal_test.py  roll_v1_synthetic_trade_overlay.py  roll_v1_web_dashboard.py  run_continuous_optimizer.ps1  run_guard_background.py  runtime_watchdog.py  seat_optimizer_service.py  seat_remote_acceptance.py  seat_transport_guard.py  setup_analytics_stack_ireland.sh  (+13 more)
(+101 files in other folders)
