[workspace]
resolver = "2"
members = [
  "crates/core_types",
  "crates/infra_clock",
  "crates/infra_bus",
  "crates/feed_polymarket",
  "crates/feed_reference",
  "crates/market_discovery",
  "crates/fair_value",
  "crates/strategy_maker",
  "crates/direction_detector",
  "crates/taker_sniper",
  "crates/exit_manager",
  "crates/probability_engine",
  "crates/timeframe_router",
  "crates/settlement_compounder",
  "crates/risk_engine",
  "crates/execution_clob",
  "crates/portfolio",
  "crates/replay_engine",
  "crates/paper_executor",
  "crates/observability",
  "crates/app_runner",
  "crates/poly_wire",
  "crates/feeder_tokyo",
  "crates/feed_udp",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Codex"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-queue = "0.3"
dashmap = "6"
futures = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
parking_lot = "0.12"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
smol_str = { version = "0.3", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
bincode = "1"
tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
url = "2"
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
toml = "0.8"

uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
