[workspace]
resolver = "2"
members = [
  "crates/core_types",
  "crates/feed_polymarket",
  "crates/feed_reference",
  "crates/forge_tokyo_relay",
  "crates/forge_wire",
  "crates/market_discovery",
  "crates/polyedge_forge",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Codex"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-queue = "0.3"
dashmap = "6"
futures = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
parking_lot = "0.12"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
smol_str = { version = "0.3", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
bincode = "1"
tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
url = "2"
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
toml = "0.8"

uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
