[package]
name = "app_runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
core_types = { path = "../core_types" }
execution_clob = { path = "../execution_clob" }
fair_value = { path = "../fair_value" }
feed_polymarket = { path = "../feed_polymarket" }
feed_reference = { path = "../feed_reference" }
futures.workspace = true
infra_bus = { path = "../infra_bus" }
market_discovery = { path = "../market_discovery" }
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
observability = { path = "../observability" }
paper_executor = { path = "../paper_executor" }
portfolio = { path = "../portfolio" }
reqwest.workspace = true
risk_engine = { path = "../risk_engine" }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strategy_maker = { path = "../strategy_maker" }
tokio.workspace = true
tracing.workspace = true
