[package]
name = "app_runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dashmap.workspace = true
core_types = { path = "../core_types" }
direction_detector = { path = "../direction_detector" }
exit_manager = { path = "../exit_manager" }
execution_clob = { path = "../execution_clob" }
fair_value = { path = "../fair_value" }
feed_polymarket = { path = "../feed_polymarket" }
feed_reference = { path = "../feed_reference" }
feed_udp = { path = "../feed_udp" }
futures.workspace = true
infra_bus = { path = "../infra_bus" }
market_discovery = { path = "../market_discovery" }
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
observability = { path = "../observability" }
paper_executor = { path = "../paper_executor" }
portfolio = { path = "../portfolio" }
probability_engine = { path = "../probability_engine" }
reqwest.workspace = true
risk_engine = { path = "../risk_engine" }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
settlement_compounder = { path = "../settlement_compounder" }
sha2.workspace = true
strategy_maker = { path = "../strategy_maker" }
taker_sniper = { path = "../taker_sniper" }
timeframe_router = { path = "../timeframe_router" }
tokio.workspace = true
tracing.workspace = true
toml.workspace = true
mimalloc = "0.1"
poly_wire = { path = "../poly_wire" }
tokio-tungstenite.workspace = true
tracing-subscriber.workspace = true
socket2 = "0.6.2"
flate2 = "1.0"
