[package]
name = "feed_udp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
poly_wire = { path = "../poly_wire" }
chrono = "0.4"
core_types = { path = "../core_types" }
tracing = { workspace = true }
socket2 = "0.6.2"
