[package]
name = "feed_udp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
poly_wire = { path = "../poly_wire" }
core_types = { path = "../core_types" }
libc = "0.2"
