[package]
name = "feeder_tokyo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
poly_wire = { path = "../poly_wire" }
rustls = { workspace = true }
libc = "0.2"
