[package]
name = "forge_tokyo_relay"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive", "env"] }
core_types = { path = "../core_types" }
feed_reference = { path = "../feed_reference" }
forge_wire = { path = "../forge_wire" }
futures.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
