[package]
name = "polyedge_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "polyedge"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
core_types = { path = "../core_types" }
feed_polymarket = { path = "../feed_polymarket" }
futures.workspace = true
market_discovery = { path = "../market_discovery" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
libc = "0.2"
rustls = { version = "0.23", features = ["ring"] }
