[package]
name = "polyedge_data_backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
chrono-tz = "0.10"
clap = { version = "4", features = ["derive", "env"] }
core_types = { path = "../core_types" }
feed_polymarket = { path = "../feed_polymarket" }
feed_reference = { path = "../feed_reference" }
futures.workspace = true
market_discovery = { path = "../market_discovery" }
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
